--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,9 @@ a , li {
     text-decoration: none;
     list-style: none;
 }
+.mt-7 {
+    margin-top: 5rem;
+}
 
 .notification {
     background-color: var(--elixir-primary);
@@ -142,3 +145,26 @@ a , li {
   border-radius: 1rem;
 }
 
+#Services{
+
+    padding: 100px;
+    background-color: #fafafa;
+
+}
+.service-content h2 {
+    color: var(--elixir-primary);
+}
+.service-content p {
+
+    color: var(--elixir-body-color);
+    font-size: 20px;
+
+}
+.service-content a {
+    display: flex;
+    align-items: center;
+    color: #2a3855;
+    gap: 5px;
+    font-weight: 600;
+    font-size: 18px;
+}
