--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,6 +228,12 @@ li {
 
 }
 
+#news {
+
+    padding: 120px 0px;
+
+}
+
 #news a {
     display: flex;
     align-items: center;
@@ -247,6 +253,7 @@ li {
 .clients-logo {
 
     background-color: #f2f2f2;
+    padding: 40px 0px;
 
 }
 
